# RayTracer-redone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
RayTracerRedone/: CMakeLists.txt  CompileG++.sh  RayTracerRedone.cpp  RayTracerRedone.sln  RayTracerRedone.vcxproj  RayTracerRedone.vcxproj.filters  json_to_scene.cpp  json_to_scene.h  splash.h  template.json  template2.json  worlds.h
RayTracerRedone/imageoutputcanvas/: imagecanvas.cpp  imagecanvas.h
RayTracerRedone/jscanvas/: JSCanvas.cpp  JSCanvas.h
RayTracerRedone/jsonparser/: JsonToScene.cpp  JsonToScene.h  SceneParser.cpp  SceneParser.h  world_factory.cpp  world_factory.h
RayTracerRedone/sdl2/: sdl2canvas.cpp  sdl2canvas.h
RayTracerRedone/sdl2canvas/: sdl2canvas.cpp  sdl2canvas.h
RayTracerRedone/tracer/config/: glm_definitions.h
RayTracerRedone/tracer/objects/: Ball.cc  Ball.cpp  Ball.h  Box.cpp  Box.h  Cylinder.cpp  Cylinder.h  Disk.cpp  Disk.h  Mesh.cpp  Mesh.h  OpenCylinder.cpp  OpenCylinder.h  Plane.cc  Plane.cpp  Plane.h  Rectangle.cpp  Rectangle.h  VirtualObject.cpp  VirtualObject.h
RayTracerRedone/tracer/objects/BoundingBox/: AABB.cpp  AABB.h  BVH.cpp  BVH.h
RayTracerRedone/tracer/objects/materials/: Lambertian.cpp  Lambertian.h  Material.h  OldMaterial.cpp  OldMaterial.h  Phong.cpp  Phong.h
RayTracerRedone/tracer/scene/: Camera.h  Canvas.h  Projection.h  Ray.cpp  Ray.h  RaySoA.cpp  RaySoA.h  Scene.h  ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
RayTracerRedone/tracer/scene/BxDF/: BTDF.h  BxDF.h  FresnelReflector.cpp  FresnelReflector.h  FresnelTransmitter.cpp  FresnelTransmitter.h  GlossySpecular.cpp  GlossySpecular.h  Lambertian.cpp  Lambertian.h  MetallicSpecular.cpp  MetallicSpecular.h  PerfectSpecular.cpp  PerfectSpecular.h  PerfectTransmitter.cpp  PerfectTransmitter.h
RayTracerRedone/tracer/scene/light/: AmbientLight.h  AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h  RayTracerRedone.cpp  VectorialLight.h
RayTracerRedone/tracer/scene/materials/: BumpMapping.cpp  Dielectric.h  Diffuse.cpp  Diffuse.h  DiffuseLight.cpp  DiffuseLight.h  Lambertian.cpp  Lambertian.h  Material.h  Matte.cpp  Matte.h  Mirror.cpp  Mirror.h  Phong.cpp  Phong.h  PhongMetal.cpp  PhongMetal.h  PhongReflective.cpp  PhongReflective.h  SampleDielectric.cpp  SampleDielectric.h  TexturedMaterial.cpp  TexturedMaterial.h  TexturedMatte.h  (+9 more)
RayTracerRedone/tracer/utils/: Color.h  ColorRGBA.h  ColorVec.cpp  ColorVec.h  ColorVec_Soa.h  Constants.h  Intersection.h  IntersectionData.h  Material.h  OrthonormalBase.cpp  OrthonormalBase.h  Types.h  intersection_data.h  utility.cpp  utility.h
(+14 files in other folders)
